<resources>
    <string name="app_name">TimeRegistration</string>
    <string name="option_new_employee">Add Employee</string>
    <string name="btnAbsence">Absence</string>
    <string name="btnStart">Start</string>
    <string name="btnStop">Stop</string>
    <string name="btnAccept">Ok</string>
    <string name="btnPause">Pause</string>
    <string name="dbStringDate">Date</string>
    <string name="new_absence_btnStartDate">Start</string>
    <string name="new_absence_btnEndDate">End</string>
    <string name="new_absence_btnAccept">Ok</string>
    <string name="new_absence_btn_decline">Cancel</string>
    <string name="new_employee_label">New Employee</string>
    <string name="main_text_time_view">Start: HH:MM Stop: HH:MM Pause: HH:MM</string>
    <string name="main_btn_start">Start\n</string>
    <string name="main_btn_stop">Stop\n</string>
    <string name="main_btn_pause">Pause\n</string>
    <string name="time_titel">Choose time:</string>
    <string name="main_err_accept_1">No start time set or no valid employee chosen! Clieck on start and set a valid time and/or choose a valid employee!</string>
    <string name="main_auto_set_stop_time">Stop time was set automatically to the current time!</string>
    <string name="main_err_accept_2">Fatal Error!!!! Your data couldn\'t be stored, note your time to paper!!! Failure in Method databaseHelper.getEventTable().createData(nEntry)</string>
    <string name="main_err_accept_3">Fatal Error!!! Your data couldn\'t be stored, note your time to paper!!! Failure in Method databaseHelper.getAttendanceTable().createData(nAttendance)</string>
    <string name="main_accept_ok">Data were written.</string>
    <string name="main_auto_set_pause_time">No pause time set!</string>
    <string name="main_btn_date">Date\n</string>
    <string name="list_btn_start">Start\n</string>
    <string name="list_btn_stop">Stop\n</string>
    <string name="list_btn_pause">Pause\n</string>
    <string name="list_btn_date">Date\n</string>
    <string name="export_btn_choose_path">Choose App Path</string>
    <string name="export_text_path_view">Click \"CHOOSE APP PATH\" to define a export location</string>
    <string name="settings_text_db_path">Click \"CHOOSE DB\" to choose a database file</string>
    <string name="export_text_choose_type">Click \"CHOOSE TYPE\" to choose the file type for the conversion</string>
    <string name="settings_btn_choose_db">Choose Database</string>
    <string name="settings_text_choose_app_path">Click \"CHOOSE APP PATH\" to change the default files location</string>
    <string name="new_employee_fname">Frist Name:</string>
    <string name="new_employee_sname">Second Name:</string>
    <string name="new_employee_icon">Icon:</string>
    <string name="new_employee_color">Color:</string>
    <string name="new_employee_btn_color">Pick Color</string>
    <string name="options_export">Export Files</string>
    <string name="options_absence">Absence</string>
    <string name="option_help">Help</string>
    <string name="option_settings">Settings</string>
    <string name="export_btn_export">Export</string>
    <string name="no_read_access">No read access!</string>
    <string name="db_delete_titel">Delete Entry</string>
    <string name="db_delete_ok">Ok</string>
    <string name="db_delete_cancel">Cancel</string>
    <string name="edit_employee">Edit employee</string>
    <string name="export_success">File was exported successfully</string>
    <string name="text_settings_new_db">Click to create new and empty database file. Old one will still be stored in the applications backup folder.</string>
    <string name="btn_settings_new_db">New Database File</string>
    <string name="text_settings_admin_pw">Click to change administration password. This password is needed to change settings of app and some methods.</string>
    <string name="btn_settings_admin_pw">Set password</string>
    <string name="new_employee_pass1">Password:</string>
    <string name="new_employee_pass2">Repeat Password:</string>
    <string name="no_employee">No employee chosen!</string>
    <string name="admin_pass">Type in the administration password. At least 10 signs! Don\'t forget it!!!!!!!</string>
    <string name="admin_repeat">Repeat password input!</string>
    <string name="admin_pass_input">Set administration password:</string>
    <string name="password_create">Create password:</string>
    <string name="password_repeat">Repeat input:</string>
    <string name="admin_pw_verification">Administration password required:</string>
    <string name="admin_dialog_failed">Can\'t load admin password dialog!</string>
    <string name="admin_wrong_pw">Couldn\'t verify password!</string>
    <string name="backup_directory">Choose backup directory! Don\'t use any application path!</string>
    <string name="backup_no_access">Couldn\'t create backup directory!</string>
</resources>
