<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/absence_btnStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_absence_btnStartDate"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/absence_btnEndDate"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/new_absence_btnEndDate"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/absence_btnStartDate"
        app:layout_constraintStart_toEndOf="@+id/absence_btnStartDate" />

    <TextView
        android:id="@+id/textViewTimeSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="Start date - stop date"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/absence_btnStartDate" />

    <Button
        android:id="@+id/absence_btnAccept"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/new_absence_btnAccept"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/absence_btnEndDate"
        app:layout_constraintStart_toEndOf="@+id/absence_btnEndDate" />

    <Button
        android:id="@+id/absence_btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/new_absence_btn_decline"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/absence_btnAccept"
        app:layout_constraintStart_toEndOf="@+id/absence_btnAccept" />

</android.support.constraint.ConstraintLayout>