<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/time_item_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:lines="2"
        android:text="@string/list_btn_pause"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/time_item_stop"
        app:layout_constraintEnd_toStartOf="@+id/time_item_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/time_item_stop" />

    <TextView
        android:id="@+id/time_item_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/list_btn_stop"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/time_item_start"
        app:layout_constraintEnd_toStartOf="@+id/time_item_pause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/time_item_start" />

    <TextView
        android:id="@+id/time_item_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:lines="2"
        android:text="@string/list_btn_start"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/time_item_stop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/time_item_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/list_btn_date"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/time_item_start"
        app:layout_constraintEnd_toStartOf="@+id/time_item_start"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/time_item_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/time_item_pause"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

</android.support.constraint.ConstraintLayout>