<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ListView
        android:id="@+id/listEmployee"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:padding="0dp"
        android:theme="@style/AlertDialog.AppCompat.Light"
        app:layout_constraintBottom_toTopOf="@+id/main_btnDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listTimeRecord"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/listEmployee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listEmployee"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_btnStart"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/main_btn_start"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/main_btnAccept"
        app:layout_constraintEnd_toStartOf="@+id/main_btnStop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_btnDate" />

    <Button
        android:id="@+id/main_btnStop"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/main_btn_stop"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_btnStart"
        app:layout_constraintEnd_toStartOf="@+id/main_btnPause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_btnStart" />

    <Button
        android:id="@+id/main_btnAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnAccept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_btnPause"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/main_btn_pause"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_btnStop"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_btnStop" />

    <Button
        android:id="@+id/main_btnDate"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/main_btn_date"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_btnStart"
        app:layout_constraintEnd_toStartOf="@+id/main_btnStart"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Info\n"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_btnPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_btnPause" />

</android.support.constraint.ConstraintLayout>